--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,6 +24,10 @@ jobs:
             target: 'x86_64-unknown-linux-gnu'
             artifact: 'RegenBrowser.AppImage'
             bundle: 'appimage'
+          - platform: 'ubuntu-latest'
+            target: 'aarch64-unknown-linux-gnu'
+            artifact: 'RegenBrowser-arm64.AppImage'
+            bundle: 'appimage'
           - platform: 'macos-latest'
             target: 'x86_64-apple-darwin'
             artifact: 'RegenBrowser.dmg'
@@ -54,14 +58,23 @@ jobs:
         if: matrix.platform == 'ubuntu-latest'
         run: |
           sudo apt-get update
-          sudo apt-get install -y libwebkit2gtk-4.1-dev libappindicator3-dev librsvg2-dev patchelf libgtk-3-dev
+          sudo apt-get install -y \
+            libwebkit2gtk-4.1-dev \
+            libappindicator3-dev \
+            librsvg2-dev \
+            patchelf \
+            libgtk-3-dev \
+            libayatana-appindicator3-dev \
+            libxdo-dev \
+            libx11-dev
           # Install Playwright dependencies
           npx playwright install-deps chromium || true
 
       - name: Install system dependencies (macOS)
         if: matrix.platform == 'macos-latest'
         run: |
-          brew install create-dmg
+          brew install create-dmg || true
+          # macOS global shortcuts require accessibility permissions (handled at runtime)
 
       - name: Install dependencies
         run: npm ci
@@ -120,7 +133,8 @@ jobs:
 
             ### Downloads
             - **Windows**: `RegenBrowser-Setup.exe` (one-click installer with Ollama)
-            - **Linux**: `RegenBrowser.AppImage` (runs anywhere)
+            - **Linux x64**: `RegenBrowser.AppImage` (runs anywhere)
+            - **Linux ARM64**: `RegenBrowser-arm64.AppImage` (for ARM laptops)
             - **macOS Intel**: `RegenBrowser.dmg`
             - **macOS Apple Silicon**: `RegenBrowser-arm64.dmg`
 
